bug 11008 drop down was getting cut off again - fixed again r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10616 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/smartPlaylist.css
+++ b/app/skin/dialogs/smartPlaylist.css
@@ -113,7 +113,7 @@ sb-rating {
   width:8em;
 }
 #smart_selected_list {
-  width:150px;
+  width:170px;
 }
 #smart_songs_count {
   width:4em;
